Declare that OriginTrials component does not need wire protocol privacy.

BUG=646631

Review-Url: https://codereview.chromium.org/2338063004
Cr-Commit-Position: refs/heads/master@{#418961}

Former-commit-id: 95f79695a1bfc78e52bf2220b916b7bdcdb58496