chrome/browser/component_updater/origin_trials_component_installer.cc
@@ -65,7 +65,7 @@ bool OriginTrialsComponentInstallerTraits::
 }
 
 bool OriginTrialsComponentInstallerTraits::RequiresNetworkEncryption() const {
-  return true;
+  return false;
 }
 
 bool OriginTrialsComponentInstallerTraits::OnCustomInstall(
